2003-07-23  Kenny Graunke  <kenny@whitecape.org>

	* advisory_board.html:
	* announcement.html:
	* ballot-summary.html:
	* board_of_directors.html:
	* charter.html:
	* directory.html:
	* documentation.html:
	* elections.html:
	* executive_director.html:
	* index.html:
	* membership.html:
	* organization.html:
	* template.html:

	Now valid XHTML 1.0 Transitional, and using the UTF-8 character
	encoding - none was previously specified. developer.gnome.org has
	used this for a long time. Also, major code cleanup, and a large
	amount of page formatting cleanup as well.

	* evilsedhack:

	Changed the heading to be valid XHTML 1.0 Transitional.

2003-07-23  Gregory Leblanc <gleblanc@linuxweasel.com>

	* advisory_board.html:
	* board_of_directors.html:
	* charter.html:
	* executive_director.html: HTML Cleanup, along the lines of what
	Kenny did earlier.

2003-07-23  Kenny Graunke  <kenny@whitecape.org>

	* directory.html:
	* documentation.html:
	* elections.html:
	* index.html:
	* membership.html:
	* organization.html:

	Much HTML cleanup. No more table stuff, much closer to being valid.
        Also made trivial changes to the text - linking email addresses, and
	whatnot.

	* evilsedhack:
	
	Include the maintainer email address which used to be in the old pages.
	This way it goes in all the pages, and looks nice too!

2003-07-23  Gregory Leblanc <gleblanc@linuxweasel.com>

	* README: some info on how to build a test-site from this branch
	* advisory_board.html:
	* ballot-summary-2001.html:
	* ballot-summary.html:
	* board_of_directors.html:
	* charter.html:
	* directory.html:
	* documentation.html:
	* election-2000.html:
	* election-2001.html:
	* electionrules-2001.html:
	* electionrules.html:
	* elections.html:
	* evilsedhack:
	* executive_director.html:
	* faq.html:
	* membership-list.html:
	* membership-policy.html:
	* membership.html:
	* organization.html:
	* voters-2000.html:
	* voters-2001.html:
	* voters.html:  ripped out navigational headers from all of these,