@@ -31,8 +31,9 @@
      The GNOME Foundation Board of Directors meets every other week to
      discuss various topics pertaining to the regular activities of the
      GNOME Foundation and GNOME.  The minutes to these meetings are posted
-     publicly on the GNOME Foundation's
-     <a href="mailto:foundation-list@gnome.org">foundation-list@gnome.org</a>mailing list</a>. (Browse the <a href="http://mail.gnome.org/archives/foundation-list">archives</a>, or <a href="http://mail.gnome.org/mailman/listinfo/foundation-list">subscribe</a>.)
+     publicly on the 
+     <a href="mailto:foundation-list@gnome.org">foundation-list@gnome.org</a>
+     mailing list. (Browse the <a href="http://mail.gnome.org/archives/foundation-list">archives</a>, or <a href="http://mail.gnome.org/mailman/listinfo/foundation-list">subscribe</a>.)
    </p>
 
    <h2>Press Releases</h2>
