@@ -1,5 +1,9 @@
 2003-07-23  Kenny Graunke  <kenny@whitecape.org>
 
+	* documentation.html: Oops. Really valid now.
+
+2003-07-23  Kenny Graunke  <kenny@whitecape.org>
+
 	* advisory_board.html:
 	* announcement.html:
 	* ballot-summary.html:
